src/objects/Sales_Quarterly_Goals__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Quarterly Goals</relationshipLabel>
        <relationshipName>Sales_Quarterly_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CNS_rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNS Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Quarterly_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSS_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSS Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Quarterly_Goals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Quarterly_Goals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName +" "+ Account__r.Owner.LastName</formula>
        <label>Goal Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Account_Dev_Plan__c</fullName>
        <label>High Level Account Dev Plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Quarter_Actions_to_be_Taken__c</fullName>
        <label>In Quarter Actions to be Taken</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Notes__c</fullName>
        <label>Manager Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Quarterly_Goals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Objectives_and_Goals__c</fullName>
        <inlineHelpText>What are your primary goals for objectives for this account?</inlineHelpText>
        <label>Primary Objectives and Goals</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q2 FY19</fullName>
                </value>
                <value>
                    <fullName>Q3 FY19</fullName>
                </value>
                <value>
                    <fullName>Q4 FY19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <formula>Account__r.Owner.Manager.FirstName +" "+ Account__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <label>Sales Quarterly Goals</label>
    <nameField>
        <displayFormat>QG- {0000}</displayFormat>
        <label>Sales Quarterly Goals</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Quarterly Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>